Switch naive-concats-sequenced to follows-anywhere

--- a/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats-sequenced.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats-sequenced.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - sequencing/nli@naive-concats-sequenced
+  - sequencing/follows-anywhere@naive-concats-sequenced
   - concat/concat@naive-concats-sequenced
 
 naive-concats-sequenced:
