Parallel registers dataset to use follows-anywhere

--- a/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-sequenced.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-sequenced.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - sequencing/nli@concatted-registers-sequenced
+  - sequencing/follows-anywhere@concatted-registers-sequenced
   - concat/concat@concatted-registers-sequenced
   - registers@concatted-registers-sequenced
 
