--- a/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-sequenced.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/concatted-registers-sequenced.yaml
@@ -1,4 +1,5 @@
 defaults:
+  - datasets/84000-parallel-sentences@concatted-registers-sequenced
   - sequencing/follows-anywhere@concatted-registers-sequenced
   - concat/concat@concatted-registers-sequenced
   - registers@concatted-registers-sequenced
