--- a/cai_garland/data/parallel_dataset_prep.config/stages/unconcatted-registers-sequenced.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/unconcatted-registers-sequenced.yaml
@@ -1,4 +1,5 @@
 defaults:
+  - datasets/84000-parallel-sentences@unconcatted-registers-sequenced
   - sequencing/nli@unconcatted-registers-sequenced
   - concat/no-concat@unconcatted-registers-sequenced
   - registers@unconcatted-registers-sequenced
