--- a/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats-sequenced.yaml
+++ b/cai_garland/data/parallel_dataset_prep.config/stages/naive-concats-sequenced.yaml
@@ -1,4 +1,5 @@
 defaults:
+  - datasets/84000-parallel-sentences@naive-concats-sequenced
   - sequencing/follows-anywhere@naive-concats-sequenced
   - concat/concat@naive-concats-sequenced
 
