--- a/cai_garland/data/dataset_prep.config/stages/naive-concats-sequenced-cased.yaml
+++ b/cai_garland/data/dataset_prep.config/stages/naive-concats-sequenced-cased.yaml
@@ -14,3 +14,6 @@ naive-concats-sequenced:
 
   # Do not sort the parallel dataset by index of the English sentence in the parallel folio dataset
   sort_by_starting_index: false
+
+  # Fix the casing during sequencing
+  fix_casing: true
